force-app/main/default/objects/QuickQueryConfiguration__c/QuickQueryConfiguration__c.object-meta.xml
<CustomObject>
    <label>QuickQueryConfiguration</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>QuickQueryConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickQueryConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>