force-app/main/default/objects/QuickQueryConfiguration__c/fields/FlowTableViewDefinition__c.field-meta.xml
<CustomField>
    <fullName>FlowTableViewDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowTableViewDefinition</label>
    <referenceTo>FlowTableViewDefinition__c</referenceTo>
    <relationshipLabel>QuickQueryConfigurations</relationshipLabel>
    <relationshipName>QuickQueryConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>