force-app/main/default/objects/QuickQueryConfiguration__c/fields/ViewUserId__c.field-meta.xml
<CustomField>
    <fullName>ViewUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuickQueryConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>